# sidechains-zk

prover/: Cargo.toml
prover/benches/: atms.rs
prover/docs/signatures/atms/: example.md
prover/src/: ecc.rs  instructions.rs  lib.rs  main_gate.rs  util.rs
prover/src/ecc/: chip.rs
prover/src/ecc/chip/: add.rs  constants.rs  witness_point.rs
prover/src/rescue/: rescue_counter_mode.rs  rescue_crhf_gate.rs  rescue_perm_gate.rs  test_vectors.rs
prover/src/rescue/primitive/: bls12_381_params.rs  crhf.rs
prover/src/signatures/: atms.rs  schnorr.rs
prover/src/signatures/primitive/: schnorr.rs
