[package]
name = "atms-halo2"
version = "0.1.0"
edition = "2021"

[lib]
name = "atms_halo2"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
bls12_381 = { version = "0.8.0", features = ["groups"] }
ff = "0.13.0"
jubjub = "0.10.0"
blake2b_simd = "1" # MSRV 1.66.0
paste = "1"
poseidon = { git = "https://github.com/iquerejeta/Poseidon252"}
rand_core = "0.6.4"
arrayvec = "0.7.2"
group = "0.13.0"
uint = "0.9.5"
num-bigint = "0.4.3"
num-traits = "0.2.15"
num-integer = "0.1.45"
rand = "0.8.5"

midnight-proofs = { version = "0.7.0", default-features = false, features = [
    "circuit-params",
] }
midnight-curves = "0.2.0"


[dev-dependencies]
rand_chacha = "0.3.1"
proptest = "1.1.0"
criterion = "0.5.1"

[[bench]]
name = "atms"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[features]
default = ["circuit-params"]
circuit-params = ["midnight-proofs/circuit-params"]
